--- a/oven/oven/src/main/docker/docker-compose.yml
+++ b/oven/oven/src/main/docker/docker-compose.yml
@@ -15,6 +15,8 @@ services:
       - SPRING_JPA_HIBERNATE_DDL_AUTO=update
     ports:
       - "8080:8080"
+    expose:
+      - "8080"
           
   oven_db:
     image: 'postgres:15.2-alpine'
@@ -28,5 +30,6 @@ services:
       - "5432:5432"
     volumes:
        - ./data:/var/lib/postgresql/data
-
-      
+volumes:
+  app:
+    driver: local
